--- a/wercker.yml
+++ b/wercker.yml
@@ -22,3 +22,10 @@ build:
 
     # A step that executes `npm install` command
     - npm-install
+
+    # A custom script step, name value is used in the UI
+    # and the code value contains the command that get executed
+    - script:
+        name: run the app
+        code: |
+          npm start
