add push to OCIR pipeline

--- a/wercker.yml
+++ b/wercker.yml
@@ -34,3 +34,17 @@ build:
         name: run the app
         code: |
           node app.js
+
+# push to OCIR
+push-release:
+  steps:
+    - internal/docker-push:
+        username: $DOCKER_USERNAME
+        password: $DOCKER_PASSWORD
+        repository: $DOCKER_REPO
+        registry: $DOCKER_REGISTRY
+        tag: $WERCKER_GIT_COMMIT
+        working-dir: /pipeline/source
+        ports: $PORT
+        env: PORT=$PORT
+        cmd: node app.js
