oh specify ocir tag for manual OKE deploy test for now

--- a/wercker.yml
+++ b/wercker.yml
@@ -43,7 +43,7 @@ push-release:
         password: $DOCKER_PASSWORD
         repository: $DOCKER_REPO
         registry: $DOCKER_REGISTRY
-        tag: $WERCKER_GIT_COMMIT
+        tag: ocir
         working-dir: /pipeline/source
         ports: $PORT
         env: PORT=$PORT
