--- a/wercker.yml
+++ b/wercker.yml
@@ -30,10 +30,18 @@ build:
 
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
+    #- script:
+    #    name: run the app
+    #    code: |
+    #      node app.js
+
+    # test what happens if you don't run the app
     - script:
-        name: run the app
+        name:  do not run the app
         code: |
-          node app.js
+           echo "node version $(node -v) running"
+
+   
 
 # push to OCIR
 # repo DOES NOT INCLUDE TAG
