kubernetes file, container name chosen as ubuntu. not sure this will fix anything.

--- a/wercker.yml
+++ b/wercker.yml
@@ -44,7 +44,7 @@ build:
    
 
 # push to OCIR
-# repo DOES NOT INCLUDE TAG
+# repo DOES NOT INCLUDE TAG, and container image is UBUNTU
 push-release:
   steps:
     - internal/docker-push:
