--- a/wercker.yml
+++ b/wercker.yml
@@ -1,7 +1,7 @@
 box: 
   id: node:latest
   ports: 
-    - "8000"
+    - "80"
 
 # just to test the node app locally
 dev:
@@ -44,7 +44,7 @@ build:
 
 # push to OCIR
 # repo DOES NOT INCLUDE TAG
-# updated registry
+# updated registry && changed PORT to 80
 push-release:
   steps:
     - internal/docker-push:
