add npm start as container entrypoint

--- a/wercker.yml
+++ b/wercker.yml
@@ -38,7 +38,7 @@ build:
     - script:
         name: run the app
         code: |
-           npm start
+           echo node --version
 
    
 
@@ -56,4 +56,4 @@ push-release:
         working-dir: /pipeline/source
         ports: $PORT
         env: PORT=$PORT
-        cmd: node app.js
+        cmd: npm start
