node version instead of npm start

--- a/wercker.yml
+++ b/wercker.yml
@@ -24,14 +24,14 @@ build:
         name: clean node
         code: |
           rm -rf node_modules/ && npm update
-          
+
     # A step that executes `npm install` command
     - npm-install
 
     - script:
         name: run the app
         code: |
-           npm start
+           node --version
 
    
 
