--- a/wercker.yml
+++ b/wercker.yml
@@ -16,12 +16,12 @@ build:
   # The steps that will be executed on build
   steps:
 
-    - script:
-        name: clean node
-        code: |
-          rm -rf node_modules/ && npm update
+  #  - script:
+   #     name: clean node
+    #    code: |
+     #     rm -rf node_modules/ && npm update
     # A step that executes `npm install` command
-    - npm-install
+    #- npm-install
 
     - script:
         name: get node version
