--- a/wercker.yml
+++ b/wercker.yml
@@ -16,17 +16,9 @@ build:
   # The steps that will be executed on build
   steps:
     - script:
-       name: clean node
-       code: |
-         rm -rf node_modules/ && npm update
-     
-    - npm-install
-
-  # keep a step to run the app, just in case the build fails
-    - script:
-        name: run app 
+        name: get node version
         code: |
-           node ./bin/www
+           node --version 
 
 # build Dockerfile in repo, and push the image created to OCIR
 build-push-image:
