--- a/wercker.yml
+++ b/wercker.yml
@@ -24,9 +24,10 @@ build:
 build-push-image:
   steps:
 
-    - internal/docker-build:
-      dockerfile: Dockerfile
-      image-name: my-new-image
+  # if you want to build Dockerfile in repo, uncomment this step
+  #  - internal/docker-build:
+  #    dockerfile: Dockerfile
+  #    image-name: my-new-image
 
     - internal/docker-push:
         username: $DOCKER_USERNAME
